--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,47 +1,3 @@
-.post{
-  display: grid;
-  grid-template-columns: .8fr 1.2fr;
-  gap: 20px;
-  width: 100%;
-  padding: 10px;
-}
-.postInfo{
-  display:inline;
-  padding: 10px;
-  padding-left: 30px;
-}
-.postImage{
-  display:inline;
-  padding:10px;
-}
-.postImageActual{
-  display:inline;
-  width: 110%;
-}
-.postTitle{
-  font-size: 26px;
-  font-weight: 800;
-}
-.postDate{
-  display: inline;
-  font-size:12px;
-}
-.postAuthor{
-  display: inline;
-  padding-right: 10px;
-  font-weight: 550;
-  font-size: 12px;
-}
-.postBody{
-  color:#282c34;
-  font-weight: 200;
-  font-size: 14px;
-}
-.postRow2{
-  padding-bottom:5px;
-  padding-top: 1px;
-}
-
 .header{
   background-color: rgba(4, 59, 92, 1);
   height: 150px;
@@ -73,18 +29,52 @@ a{
 .type1Link{
   color:white;
 }
-.row{
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
 .column{
   flex: 50%;
   padding: 0 4px;
 }
-.column img{
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 128px;
-  height: 128px;
+.tiles{
+  padding: 0;
+}
+
+img {
+  width: 400px;
+  height: 400px;
+  --c: #1095c1;
+  /* the color */
+  --b: .1em;
+  /* border length*/
+  --d: 20px;
+  /* the cube depth */
+
+  --_s: calc(var(--d) + var(--b));
+
+  color: var(--c);
+  border: solid #0000;
+  border-width: var(--b) var(--b) var(--_s) var(--_s);
+  background:
+    conic-gradient(at left var(--d) bottom var(--d),
+      #0000 90deg, rgb(255 255 255 /0.3) 0 225deg, rgb(255 255 255 /0.6) 0) border-box,
+    conic-gradient(at left var(--_s) bottom var(--_s),
+      #0000 90deg, var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b)) border-box;
+  transform: translate(calc(var(--d)/-1), var(--d));
+  clip-path:
+    polygon(var(--d) 0%,
+      var(--d) 0%,
+      100% 0%,
+      100% calc(100% - var(--d)),
+      100% calc(100% - var(--d)),
+      var(--d) calc(100% - var(--d)));
+  transition: 0.5s;
+}
+
+img:hover {
+  transform: translate(0, 0);
+  clip-path:
+    polygon(0% var(--d),
+      var(--d) 0%,
+      100% 0%,
+      100% calc(100% - var(--d)),
+      calc(100% - var(--d)) 100%,
+      0% 100%);
 }
