--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,56 +29,132 @@ a{
 .type1Link{
   color:white;
 }
-.column{
-  flex: 50%;
-  padding: 0 4px;
-}
-.tiles{
-  padding: 0;
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
-img {
-  display: block;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+.section-fluid-main {
   position: relative;
-  margin-left: auto;
+  display: block;
+  overflow: hidden;
+  width: calc(100% - 40px);
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
-  width: 400px;
-  height: 400px;
-  --c: #1095c1;
-  /* the color */
-  --b: .3em;
-  /* border length*/
-  --d: 10px;
-  /* the cube depth */
-
-  --_s: calc(var(--d) + var(--b));
-
-  color: var(--c);
-  border: solid #0000;
-  border-width: var(--b) var(--b) var(--_s) var(--_s);
-  background:
-    conic-gradient(at left var(--d) bottom var(--d),
-      #0000 90deg, rgb(255 255 255 /0.3) 0 225deg, rgb(255 255 255 /0.6) 0) border-box,
-    conic-gradient(at left var(--_s) bottom var(--_s),
-      #0000 90deg, var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b)) border-box;
-  transform: translate(calc(var(--d)/-1), var(--d));
-  clip-path:
-    polygon(var(--d) 0%,
-      var(--d) 0%,
-      100% 0%,
-      100% calc(100% - var(--d)),
-      100% calc(100% - var(--d)),
-      var(--d) calc(100% - var(--d)));
-  transition: 0.5s;
+  margin-left: auto;
+  max-width: 1140px;
+  padding: 100px 0;
 }
 
-img:hover {
-  transform: translate(0, 0);
-  clip-path:
-    polygon(0% var(--d),
-      var(--d) 0%,
-      100% 0%,
-      100% calc(100% - var(--d)),
-      calc(100% - var(--d)) 100%,
-      0% 100%);
+.section-row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.section-row:hover .section-col {
+  opacity: 0.1;
+}
+
+.section-col {
+  position: relative;
+  width: 100%;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+  transition: opacity 250ms linear;
+}
+
+.section-row .section-col:hover {
+  opacity: 1;
+}
+
+.section {
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  cursor: pointer;
+  padding: 15px;
+}
+
+.section-in {
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.section-in img {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: transform 250ms linear;
+}
+
+.section-col:hover .section-in img {
+  transform: scale(1.1) rotate(-3deg);
+}
+
+.hover-text {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 100;
+  pointer-events: none;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  mix-blend-mode: difference;
+}
+
+.hover-text h2 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 200;
+  font-size: 8vw;
+  line-height: 1;
+  color: #fff;
+  opacity: 0;
+  transform: scale(0.8);
+  transition: transform 250ms linear, opacity 250ms ease;
+}
+
+.section-col:hover+.hover-text h2 {
+  opacity: 1;
+  transform: scale(1);
+}
+
+@media (max-width: 767px) {
+  .section-col {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .hover-text h2 {
+    font-size: 8vw;
+  }
 }
