--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,133 +35,68 @@ a{
 .type1Link{
   color:goldenrod;
 }
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+#photos {
+  /* Prevent vertical gaps */
+  line-height: 0;
+  margin-left: 150px;
+
+  -webkit-column-count: 2;
+  -webkit-column-gap: 5px;
+  -moz-column-count: 2;
+  -moz-column-gap: 5px;
+  column-count: 2;
+  column-gap: 5px;
+
 }
-.section-fluid-main {
+
+#photos img {
+  /* Just in case there are inline attributes */
+  width: 512px !important;
+  height: 512px !important;
+}
+
+a.darken {
+  display: inline-block;
+  background: black;
+  padding: 0;
   position: relative;
+
+}
+
+a.darken img {
   display: block;
-  overflow: hidden;
-  width: calc(100% - 40px);
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1140px;
-  padding: 100px 0;
+
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
-.section-row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+a.darken:hover img {
+  opacity: 0.3;
 }
 
-.section-row:hover .section-col {
-  opacity: 0.1;
-}
-
-.section-col {
-  position: relative;
-  width: 100%;
-  -ms-flex: 0 0 50%;
-  flex: 0 0 50%;
-  max-width: 50%;
-  transition: opacity 250ms linear;
-}
-
-.section-row .section-col:hover {
-  opacity: 1;
-}
-
-.section {
-  position: relative;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  cursor: pointer;
-  padding: 15px;
-}
-
-.section-in {
-  position: relative;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.section-in img {
-  display: block;
-  width: 512px;
-  height: 512px;
-  transition: transform 250ms linear;
-}
-
-.section-col:hover .section-in img {
-  transform: scale(1.1) rotate(-3deg);
-}
-
-.hover-text {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
-  z-index: 100;
-  pointer-events: none;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  text-align: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-
-.hover-text h2 {
+a.darken span {
+  visibility: hidden;
+  font-size: 16px;
   position: absolute;
-  font-family: 'Courier New', Courier, monospace;
-  font-style: italic;
-  font-weight: 200;
-  font-size: 3vw;
-  line-height: 1;
-  color: #ffffff;
-  opacity: 0;
-  transform: scale(0.5);
-  transition: transform 250ms linear, opacity 250ms ease;
-  background-color: black;
-  padding: 15px ;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  line-height: 100%;
 }
 
-.section-col:hover+.hover-text h2 {
-  opacity: 1;
-  transform: scale(1);
-}
-
-@media (max-width: 767px) {
-  .section-col {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
+a.darken:hover span {
+  color: #fff;
+  visibility: visible;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 .subTitle{
