--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,3 +146,27 @@ img{
   top:40px;
   right:20px;
 }
+
+h1{
+  text-align: center;
+}
+
+ul#cart-list{
+  list-style: none;
+  padding: 0;
+}
+
+ul#cart-list li{
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+#subtotal{
+  text-align: right;
+}
+
+#subtotal p {
+  margin: 5px;
+}
