hehe minor again

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,6 +54,7 @@ a{
   margin: 0 auto;
   /* Center the container horizontally */
   background-color: transparent;
+  padding-top: 100px;
 }
 
 .pcontainer{
